--- a/gb/13/9/21/n3969227.md
+++ b/gb/13/9/21/n3969227.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tedesu344/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tedesu344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tedesu344/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tedesu344/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tedesu344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tedesu344/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tedesu344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【陈思敏】联合国等三会议令中共闻之丧胆</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2013/09/1309211033481497.jpg" />
 <h6>法轮功人权代表陈师众正在发言（唐瑛／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2013年09月21日讯】判决薄熙来，何须等待济南中院的微博。目前正在日内瓦召开的全球24届<ahref="https://github.com/tedesu344/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%9B%BD.md#1">联合国</a>人权理事会大会，19日议程进行一场由副主席Iruthisham Adam女士主持，<ahref="https://github.com/tedesu344/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>人权代表陈师众博士应邀专题发言的讨论会，再加上此前于日本京都、奥地利维也纳的两场国际学术研讨会，三场会议昭告天下，薄熙来的真正罪恶，也是中共不敢面对的真相。</p>
-<p>在<ahref="https://github.com/tedesu344/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%9B%BD.md#1">联合国</a>国际人权讨论会上，当<ahref="https://github.com/tedesu344/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>人权代表陈师众博士发言时，中共代表就慌了，也忘了自己穿着西装打着领带，身处国际会议却不顾国际礼仪，多次粗暴无礼的打断陈师众博士的讲话。中共代表的颟顸之举，也遭到在场的美、英、法、意、瑞典、瑞士等驻联合国代表的纷纷抗议。</p>
+	<p>【大纪元2013年09月21日讯】判决薄熙来，何须等待济南中院的微博。目前正在日内瓦召开的全球24届<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%9B%BD.md#1">联合国</a>人权理事会大会，19日议程进行一场由副主席Iruthisham Adam女士主持，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>人权代表陈师众博士应邀专题发言的讨论会，再加上此前于日本京都、奥地利维也纳的两场国际学术研讨会，三场会议昭告天下，薄熙来的真正罪恶，也是中共不敢面对的真相。</p>
+<p>在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%9B%BD.md#1">联合国</a>国际人权讨论会上，当<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>人权代表陈师众博士发言时，中共代表就慌了，也忘了自己穿着西装打着领带，身处国际会议却不顾国际礼仪，多次粗暴无礼的打断陈师众博士的讲话。中共代表的颟顸之举，也遭到在场的美、英、法、意、瑞典、瑞士等驻联合国代表的纷纷抗议。</p>
 <p>只是每次中共又急又怒的驳斥某件事时，就是在告诉大家，其否认的就是真相。陈师众博士在联大提出的指控及要求，是彻底调查和阻止中共活摘法轮功学员器官，这也是相关指控第三次在联大被正式公开提出。但对于联合国人权专员多次要求就活摘器官指控做出解释的中共，也始终未予回应。</p>
 <p>中共的沉默以对并不令人意外，因为跃居世界第二、实际移植量可能远高于美国的中国，至今仍无一套可昭公信的公开、透明、可溯源的器官分配系统。</p>
 <p>对于器官移植，撇开有关在最短时间可以大数配型与测试，特别是，非近亲捐献的活体移植等等在医学上不可能实现的“奇迹”，其实中共只要回答一个最基础也是最根本的问题，那就是：“移植器官到底从何而来？”</p>
@@ -28,35 +28,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/13/3/21/n3828270.md#1">澳参议员反活摘器官动议案获参议院通过</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/13/5/1/n3859559.md#1">族群青年领袖研习营  闭幕宣言促查中共活摘器官</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/13/5/19/n3874474.md#1">郑纯清：诗歌：迫害再继续 天地不允许</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/13/8/6/n3934593.md#1">台北揭露活摘演示剧 制止中共暴行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/3/21/n3828270.md#1">澳参议员反活摘器官动议案获参议院通过</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/5/1/n3859559.md#1">族群青年领袖研习营  闭幕宣言促查中共活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/5/19/n3874474.md#1">郑纯清：诗歌：迫害再继续 天地不允许</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/8/6/n3934593.md#1">台北揭露活摘演示剧 制止中共暴行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/tedesu344/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970106.md#1">北市寻陈先生 北京返台失联 手机空号留假地址</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970670.md#1">华春莹找上美国务院发言人辩论 又遭漏底</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tedesu344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tedesu344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/9/21/n3969227.htm">【陈思敏】联合国等三会议令中共闻之丧胆</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/9/21/n3969227.htm">【陈思敏】联合国等三会议令中共闻之丧胆</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tedesu344/djy/blob/master/gb/13/9/21/n3969227.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tedesu344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tedesu344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tedesu344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tedesu344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tedesu344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/13/9/21/n3969227.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
